	- retrieve pubkey(s) from rpmdb, not from detached signature file.
	- add header DSA signature.
	- add header RSA signature (untested, disabled for now).
`	- don't bother with signing check if 16 bits of hash don't match.
	- only V3 signatures for now.
	- wire --nodigest/--nosignature options to checksig/query/verify modes.
	- make --addsign and --resign behave exactly the same.

4.0.3 -> 4.0.4:
	- solaris: translate i86pc to i386 (#57182).
	- fix: %GNUconfigure breaks with single quotes (#57264).
	- fix: typo in find-requires.
	- tru64 compiler message cleanup.
	- add buildarch lines for hppa (#57728).
	- sparc: make dbenv per-rpmdb, not per-dbi.
	- handle lazy db open's in chroot with absolute path, not prefix strip.
	- Depends should use CDB if configured.
	- autodetect python 1.5/2.2.
	- make rpm-perl package self-hosting (#57748).
	- permit gpg/pgp/pgp5 execs to be reconfigured.
	- fix: signing multiple times dinna work, discard immutable region.
	- remove poptmodule.so for separate packaging.
	- permit subset installs for %lang colored hardlink file sets.
	- missing key(s) on keyring when verifying a signature is now an error.
	- remove dependency whiteout.
	- calculate rpm-4.1 ordering/orientation metrics in rpmdepOrder().
	- sync popt and rpmio with rpm-4.1, rpmio has OpenPGP API.
	- sync rpmdb and build with rpm-4.1, lots of splint annotations.
	- add :armor and :base64 query format qualifiers for binary signatures.
	- fix: query format qualifiers needed header.c merge.
	- fix: query format qualifiers needed header.c merge.
	- ppc64 arch added (#58634,#58636).
	- turn on auto-generated perl requirements (#58519, #58536, #58537).
	- fix: %exclude functional (again).
	- trap SIGILL for ppc64 inline asm voodoo fix from cross-dressed ppc32.
	- fix: fancy hash fiddles if not a tty.
	- fix: handle /.../ correctly in rpmCleanPath().
	- transaction rollback code in rpmRollback().
	- Red Hat 6.2 portability cruft.